--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.\\SqlExpress; Database=LibSys; Trusted_Connection=true; TrustServerCertificate=true;"
+  },
+  "AppSettings": {
+    "Token": "need 256 bytes for authentication" 
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
